objects/User.object
<CustomObject>
    <fields>
        <fullName>Reporting_Group__c</fullName>
        <description>This shall be used for reporting - to determine the Opportunity source.
Based on the group an opp source will be decided.
Request: noefi 26.01.2018</description>
        <label>Reporting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin/Other</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>DSR</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>World Wide Sales Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Reporting_Group__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>